--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ social-network-links:
   # twitter: daattali
   # patreon: DeanAttali
   youtube: "@hadath.alshamya"
-  whatsapp: +9647826270071
+  whatsapp: 9647826270071
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
