--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: وكالة حدث الشامية الألكترونية
 
 # Your name to show in the footer
-author: @X
+author: X
 
 ###############################################
 # --- List of links in the navigation bar --- #
