--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 title: وكالة حدث الشامية الألكترونية
 
 # Your name to show in the footer
-author: X
+# author: X
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -52,12 +52,12 @@ round-avatar: true
 social-network-links:
   # email: "someone@example.com"
   # rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: hadath.alshamya
-  github: hadath-alshamya
-  # twitter: daattali
-  # patreon: DeanAttali
-  youtube: "@hadath.alshamya"
-  whatsapp: 9647826270071
+  # facebook: hadath.alshamya
+  # github: hadath-alshamya
+  # # twitter: daattali
+  # # patreon: DeanAttali
+  # youtube: "@hadath.alshamya"
+  # whatsapp: 9647826270071
 #  medium: yourname
 #  reddit: yourname or r/yoursubreddit
 #  linkedin: daattali
