--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ navbar-var-length: false
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 page-col: "#000000"
-text-col: "#FFFFFF"
+text-col: "#FFB703"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 navbar-col: "#000000"
